# Stuff

./: .gitignore
UNI/AlDa-SS23/: HashTable.cc
UNI/IBN-SS23/: Clockalgorithm.cc  anonymepipes.cc
UNI/IPI-WS22/game_of_life/gameoflife-ws2022/: canvas.hh  gameoflife  gameoflife.cc
UNI/IPK-WS22/uebung01/: Votier.txt  aufgabe2.cpp  errors.cpp  legalbutwrong.cpp
UNI/IPK-WS22/uebung02/: Votier.txt  aufgabe1.cpp  aufgabe3.cpp  aufgabe3c.cpp
UNI/IPK-WS22/uebung02/Korrektur/: aufgabe1.cpp  aufgabe2.cpp  aufgabe3c.cpp
UNI/IPK-WS22/uebung03/: aufgabe2.cpp  votieren.txt
UNI/IPK-WS22/uebung03/Korrektur/: Git.txt  aufgabe2.cpp
UNI/IPK-WS22/uebung04/: Wichtiger Hinweis vom Tutor.txt  letterfrequencies.cc  votieren.txt
UNI/IPK-WS22/uebung04/Aufgabe 2/: CMakeLists.txt  frequencies.hh
UNI/IPK-WS22/uebung05/: CMakeLists.txt  main.cc  polygon.cc
UNI/IPK-WS22/uebung06/: votieren.txt
UNI/IPK-WS22/uebung06/aufgabe1/: CMakeLists.txt  plot.cc  point.cc
UNI/IPK-WS22/uebung06/aufgabe1/Korrektur/: canvas.cc  canvas.hh  plot.cc  point.hh
UNI/IPK-WS22/uebung07/: aufgabe1.cc  aufgabe2.cc  votieren.txt
UNI/IPK-WS22/uebung09/: debug-1.cc  debug-2.cc
UNI/IPK-WS22/uebung10/: aufgabe1und2.cc  votieren.txt
UNI/ISW-WS23/: Pokemon.java
UNI/ISW-WS23/Ü2/: Swap.java
UNI/ISW-WS23/Ü3/: aufgabe321.drawio
UNI/Num0-WS23/Ü1/: aufgabe13c.py  aufgabe13d.py  aufgabe15c.py
UNI/Num0-WS23/Ü3/: aufgabe3-1a.py  aufgabe3-1a2.py  aufgabe3-1b.py  aufgabe3-1c.py  aufgabe3-1test.py
game_of_life/gameoflife-ws2019/: 9.txt
mandelbrot/: canvas.hh  mandelbrot.cc
(+40 files in other folders)
